# temporal-template

./: .gitignore  go.just  justfile  kotlin.just  python.just  typescript.just
code_10703/: README.md  pyproject.toml
code_10703/context_propagation/: activities.py  activity_worker.py  codec_server.py  shared.py  starter.py  worker.py  workflows.py
code_11666/update/: acitivities.go  update.go
code_11666/update/starter/: main.go
code_11666/update/worker/: main.go
code_13488/encryption/: codec.py  converter.py  worker.py
code_13646/message-passing/execute-update/src/: activities.ts  client.ts  worker.ts  workflows.ts
code_13646/python/: README.md  pyproject.toml
code_card_reissue_perf_test/: docker-compose.yml  go.mod  go.sum
code_card_reissue_perf_test/helloworld/: helloworld.go
code_card_reissue_perf_test/helloworld/starter/: main.go
code_card_reissue_perf_test/helloworld/worker/: main.go
code_kotlin_hanging_test/: grpc-logs.log.1_apiKey  readme.md  settings.gradle.kts
code_kotlin_hanging_test/app/: build.gradle.kts
code_local_activity_bomb/helloworld/: helloworld.go
code_local_activity_bomb/helloworld/starter/: main.go
code_springboot_dynamic/: README.md  settings.gradle
code_tracing/: docker-compose.yml  pyproject.toml
code_tracing/hello/: hello_activity.py
go/requester-use-case/: README.md
go/requester-use-case/helloworld/: README.md
go/requester-use-case/helloworld/starter/: main.go
java/code_13965/: README.md  settings.gradle
java/code_13965/core/: build.gradle
java/code_14142/: build.gradle  settings.gradle
nexus-sample_15485/: README.md
nexus-sample_15485/caller/: data_converter.go  workflows.go
nexus-sample_15485/caller/starter/: main.go
nexus-sample_15485/caller/worker/: main.go
nexus-sample_15485/handler/worker/: main.go
nexus-sample_15485/service/: api.go
python/code_tracing/: .gitignore
python/code_tracing/hello/: hello_activity.py  main.py
python/signal-queue-process/: pyproject.toml
python/signal-queue-process/hello/: api.py  hello_signal.py  worker.py
(+45 files in other folders)
